name:                topdown
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/topdown#readme
--license:             BSD3
--license-file:        LICENSE
--author:              Author name here
--maintainer:          example@example.com
--copyright:           2017 Author name here
--category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib.ChunkData,
    Lib.ChunkGen,
    Lib.Main,
    Lib.Render,
    Lib.Scene,
    Lib.Spaces
    Lib.Update,
    Lib.Util,
    Lib.World,
    Lib.WorldGen
  ghc-options:         -Wall
  build-depends:
    base >= 4.7 && < 5,
    array,
    containers,
    hashable,
    lens,
    linear,
    MonadRandom,
    mtl,
    sdl2,
    sdl2-ttf,
    text,
    vector
  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes,
    TupleSections,
    TypeFamilies,
    ViewPatterns

  default-language:    Haskell2010

executable topdown-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , topdown
  default-language:    Haskell2010
