name:                topdown
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/topdown#readme
--license:             BSD3
--license-file:        LICENSE
--author:              Author name here
--maintainer:          example@example.com
--copyright:           2017 Author name here
--category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Lib.Game.ChunkGen
    , Lib.Game.Render
    , Lib.Game.Update
    , Lib.Game.WorldGen
    , Lib.Graphics.Scene
    , Lib.Main
    , Lib.Model.Lenses
    , Lib.Model.Spaces
    , Lib.Model.Types
    , Lib.Model.World
    , Lib.TH
    , Lib.Util
  ghc-options:         -Wall -optl-fuse-ld=gold -O2
  ld-options:  -fuse-ld=gold
  build-depends:
    base >= 4.7 && < 5,
    array,
    containers,
    hashable,
    lens,
    linear,
    MonadRandom,
    mtl,
    sdl2,
    sdl2-ttf,
    template-haskell,
    text,
    vector
  default-extensions:
    DeriveFunctor,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes,
    TupleSections,
    TypeApplications,
    TypeFamilies,
    ViewPatterns

  default-language:    Haskell2010

executable topdown-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -optl-fuse-ld=gold -O2
  ld-options:  -fuse-ld=gold
  build-depends:       base
                     , topdown
  default-language:    Haskell2010
